--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,8 @@ steps:
     azureResourceManagerConnection: 'AzureRmPipeline-conn'
     subscriptionId: '9343cde0-a2b2-4112-9cb1-4c9f7f0d9ca6'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: 'AzureRmPipeline-rg.'
-    location: 'South India'
+    resourceGroupName: 'RG-US-East'
+    location: 'East US'
     templateLocation: 'Linked artifact'
     csmFile: 'azure-vm-deploy/azuredeploy.json'
     overrideParameters: '-projectName vm-deployment -linkedTemplateUri https://github.com/AkshayGets/azure-vm-deploy'
